cdk8s/dist/dev/ns.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testtesttest
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ubuntu
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: dex
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx-controller
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: geth
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: ci
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
spec: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
spec: {}
